1、重写了led的驱动，支持多进程open操作(未做同步处理，可能会有同步问题) 2、添加了打包rootfs的脚本，支持执行就能打包文件系统做烧录 3、一些驱动文件移动了，重新整理了代码结构 4、文件系统rcS文件改动，在文件系统自动配置ip地址

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,7 @@
         "utility": "c",
         "of.h": "c",
         "cdev.h": "c",
-        "gpio.h": "c"
+        "gpio.h": "c",
+        "memory": "c"
     }
 }
